# gym_coach

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  PLAN.md  README.md  fly.toml  pyproject.toml  render.yaml
.claude/memory/: project_deployment.md
app/: config.py  deps.py  main.py
app/bot/: runner.py
app/coach/: inspiration.py
app/db/: engine.py  models.py
app/domain/: exercises.py  habits.py  planner.py  progression.py  stats.py  workouts.py
app/scheduler/: runner.py
app/web/routes/: habits.py  history.py  home.py  plan.py  week.py  workout.py
app/web/static/: app.css  manifest.json  sw.js
app/web/templates/: base.html  history.html  home.html  week.html
app/web/templates/partials/: finish_form.html  habit_chip.html  set_row.html  walk_chip.html  weekly_goals.html
app/web/templates/plan/: week.html
app/web/templates/workout/: log.html
deploy/: coach.service  setup.sh
deploy/cloudflared/: quick-tunnel.sh
scripts/: migrate_v2.py
tests/: test_planner.py
